# glynne_fw

./: MANIFEST.in  README.md  setup.cfg
.github/workflows/: publish.yml
glynne_fw/: .gitignore  main.py
glynne_fw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
glynne_fw/agent1/: chat.py
