[metadata]
name = glynne_fw
version = 0.1.5
author = GLYNNE S.A.S
author_email = alexglynne7@gmail.com
description = Framework de desarrollo de agentes de inteligencia artificial conversacionales personalizables, diseñados para integrarse en arquitecturas de software y automatizar procesos empresariales.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/thealeglynne/glynne_fw
project_urls =
    Source = https://github.com/thealeglynne/glynne_fw
    Tracker = https://github.com/thealeglynne/glynne_fw/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Frameworks
    Topic :: Software Development :: Libraries

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    fastapi
    uvicorn
    langchain
    langchain-groq
    langchain-core
    python-dotenv
    pydantic
    httpx
    requests
    tqdm
    tenacity

[options.packages.find]
where = .
include = glynne_fw*

[options.entry_points]
console_scripts =
    glynne-fw = glynne_fw.main:run
